--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ venv
 *.code-workspace
 # Setuptools distribution folder.
 /dist/
+/build/
 
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
